deploy/templates/app.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: go-app-twitter
  labels:
    app: twitter
    env: dev
spec:
  replicas: 3
  selector:
    app: twitter
    env: dev
  template:
    metadata:
      labels:
        app: twitter
        env: dev
    spec:
      containers:
        - name: go-app-twitter
          image: quay.io/pratikmahajan/go-app-twitter:staging-latest
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
