deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-twitter
  labels:
    app: twitter
    env: dev
spec:
  type: ClusterIP
  selector:
    app: twitter
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
